+calc animation jumps fixed + style of hint

--- a/templates/paths/calculation/style.css
+++ b/templates/paths/calculation/style.css
@@ -56,7 +56,8 @@
   top: 8%;
 }
 #karetka:hover::after{
-  top: 60%;
+  top: 100%;
+  left: 10%;
 }
 .window-header {
   margin-left: 50px;
